default/apps/sso-helper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso-helper
  namespace: default
spec:
  selector:
    app: sso-helper
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
